[package]
name = "my_dag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thepipelinetool = { git = "https://github.com/thepipelinetool/thepipelinetool.git" }

[[bin]]
name = "my_dag"
path = "src/main.rs"
